--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+    <nav>
+        <div class="Logo">KK-TOURISM</div>
+        <div class="Menubar">
+           <a class="MB" href="#">Home</a>
+           <a class="MB" href="#">Best Offers</a>
+           <a class="MB" href="#">Hill Stations</a>
+           <a class="MB" href="#">Our Sites</a>
+           <a class="MB" href="#">Contact Us</a>
+        </div>
+        <div class="Registerbtn">
+           <a class="Rb" href="#">Register</a>
+        </div>
+    </nav>
+    <section class="headertext">
+        <span>Enjoy</span>
+        <h1>International Travel Agency</h1>
+        <br>
+        <a href="#">Book Your Journey</a>
+    </section>
+</header>
+</body>
+</html>
 
